Thu Mar 31 11:34:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
          Generated missing ;

        * TAO_IDL/be/be_visitor_interface/any_op_cs.cpp:
          Generate true instead of 1

        * TAO_IDL/be/be_visitor_typecode/typecode_decl.cpp:
          Instead of TAO_NAMESPACE_STORAGE_CLASS generate extern with
          after that the export macro

Thu Mar 31 09:53:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.h:
        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.h:
          Added include of Unbounded_Queue.h

Thu Mar 31 09:49:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_operation/direct_proxy_impl_ss.cpp:
          Generate the dynamic_cast in one line

        * tao/PortableServer/PolicyS.cpp:
          Regenerated

Thu Mar 31 09:44:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_interface/interface_ss.cpp:
          Generate the reinterpret cast on one line, just as the other
          casts, makes it more readable

Thu Mar 31 08:58:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TypeCode_Struct_Field.inl:
          Full member specializations must be preceeded by a "template<>"
          declaration.  Addresses build warnings exhibited by HP aC++.

Thu Mar 31 08:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TypeCode_Enumerator.inl:
          Full member specializations must be preceeded by a "template<>"
          declaration.  Addresses build warnings exhibited by HP aC++.

Thu Mar 31 08:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CDR_Encaps_Codec.cpp:
        * tao/Union_TypeCode.cpp:
        * tao/skip.cpp:
          Fixed compile problem in emulated exceptions build

Thu Mar 31 08:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
