@@ -1,3 +1,9 @@
+Thu Mar 31 11:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_root/root_ch.cpp:
+          Only generate forward declaration of Collocation_Proxy_Broker when
+          a non local interface has been seen
+
 Thu Mar 31 11:34:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:
